--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" aria-current="page" href="/">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Sobre nós</a>
@@ -25,29 +25,62 @@
           <li class="nav-item">
             <a class="nav-link" href="#">Contato</a>
           </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Dropdown
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
-          </li>
+          {% if user.is_authenticated %}
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Opções
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="{% url 'links:lista' %}">Meus links</a></li>
+                <li><a class="dropdown-item" href="#">Configurações</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="{% url 'usuarios:logout' %}">Sair</a></li>
+              </ul>
+            </li>
+          {% endif %}
         </ul>
         <form class="d-flex" role="search">
           <input class="form-control me-2" type="search" placeholder="Digite..." aria-label="Search">
           <button class="btn btn-outline-success" type="submit">Buscar</button>
         </form>
-        <a href="{% url 'usuarios:add_usuario' %}" class="btn btn-info ms-1">Cadastre-se</a>
-        <a href="{% url 'usuarios:login' %}" class="btn btn-secondary ms-1">Login</a>
+        {% if not user.is_authenticated %}
+          <a href="{% url 'usuarios:add_usuario' %}" class="btn btn-info ms-1">Cadastre-se</a>
+          <a href="{% url 'usuarios:login' %}" class="btn btn-secondary ms-1">Login</a>
+        {% endif %}
+        {% if user.is_authenticated %}
+          <a href="{% url 'usuarios:logout' %}" class="btn btn-warning ms-1">Sair</a>
+        {% endif %}
       </div>
     </div>
   </nav>
     <div class="container">
       {% block corpo %}
+        <h1>Informações sobre visualizações e cliques</h1>
+        <h3>Visualizações</h3>
+        <h4>{{ visualizacao }}</h4>
+        <hr>
+
+        <h3>Links e cliques</h3>
+        <table class="table">
+          <thead>
+            <tr>
+              <th scope="col">#</th>
+              <th scope="col">Título</th>
+              <th scope="col">Link</th>
+              <th scope="col">Cliques</th>
+            </tr>
+          </thead>
+          <tbody>
+            {% for link in links %}
+              <tr>
+                <th scope="row">{{ link.id }}</th>
+                <td>{{ link.titulo }}</td>
+                <td>{{ link.url }}</td>
+                <td>{{ link.clique }}</td>
+              </tr>
+            {% endfor %}
+          </tbody>
+        </table>
       {% endblock corpo %}
     </div>
     <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
