--- a/templates/links/add_link.html
+++ b/templates/links/add_link.html
@@ -6,7 +6,7 @@
 
 {% block corpo %}
 
-<h1>Novo Link</h1>
+<h1>Informações do Link</h1>
     <form method="post">
         {% csrf_token %}
         <div class="mb-3">
